--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -1,3 +1,34 @@
+/* pop_up */
+.popup_container {
+  background: black;
+  width: 440px;
+  /* height: 672px; */
+  border-radius: 16px;
+  overflow: hidden;
+  display: flex;
+  flex-flow: row wrap;
+  position: absolute;
+  top: 280px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 100;
+  box-shadow: 0px 8px 36px rgba(0, 0, 0, 0.2);
+}
+.popup_beauty {
+  width: 100%;
+  height: 586px;
+  background: url(../assets/popup_beauty/popup_img.png) no-repeat 0 0 / cover;
+}
+.popup_container button {
+  /* background: yellow; */
+  width: 50%;
+  height: 86px;
+  font-size: 16px;
+  color: var(--content);
+  border-right: 1px solid var(--gray-100);
+}
+
+
 /* main_banner */
 .swiper_main_banner{
   background: orange;
@@ -172,4 +203,10 @@
   height: 18px;
   background: url(../assets/icons/main/arrow-small.png) no-repeat;
   order: -1;
+}
+.recent_products_next {
+  width: 18px;
+  height: 18px;
+  background: url(../assets/icons/main/arrow-small.png) no-repeat;
+  transform: scaleY(-1);
 }
