--- a/client/css/cart.css
+++ b/client/css/cart.css
@@ -2,6 +2,7 @@ h2.cart_title {
   margin-top: 80px;
   text-align: center;
   font-weight: 500;
+  font-size: 22px;
 }
 .cart_inner {
   display: flex;
@@ -33,6 +34,7 @@ h2.cart_title {
 .select_all {
   margin: 0px 17px 0 8px;
   position: relative;
+  z-index: -1;
 }
 
 .select_all::after {
