--- a/client/css/page_productDetail.css
+++ b/client/css/page_productDetail.css
@@ -247,26 +247,27 @@
   margin-top: 16px;
   margin-bottom: 72px;
   height:32px;
+  /* display: flex;
+  align-items: center; */
+  text-align: center;
 }
 
-.prev {
-  background-image: no-repeat url("../assets/icons/Icon/arrow_prev.svg");
-  width: 8px;
-  height: 16px;
-  padding: 4px;
-  /* background-position: 4px 0; */
-  border-radius: 4px solid #E1E1E1;
-  margin-right: 16px;
-  display: inline-block;
-} 
+.bg-arrow_prev {
+  width: 56px; 
+  height: 56px;
+  background: url('../assets/icons/Icon/arrow_prev.png') 10px 10px no-repeat;
+  border: 1px solid #E1E1E1;
+  border-radius: 4px;
+  margin-right: 8px;
+}
 
-.next {
-  background-image: url("../assets/icons/Icon/arrow_next.svg");
-  /* width: 8px;
-  height: 16px; */
-  /* background-position:; */
-  border-radius: 4px solid #E1E1E1;
-  display: inline-block;
+.bg-arrow_next {
+  width: 56px; 
+  height: 56px;
+  background: url('../assets/icons/Icon/arrow_next.png') 10px 10px no-repeat;
+  border: 1px solid #E1E1E1;
+  border-radius: 4px;
+  margin-left: 8px;
 }
 
 .inquiry-table {
@@ -291,7 +292,7 @@ tbody td:first-child {
 thead {
   width: 1050px;
   height: 58px;
-  
+
 }
 
 
