--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -57,6 +57,7 @@
   display: none;
 }
 
+
 /* main */
 .page_main {
   position: relative;
@@ -65,6 +66,7 @@
 
 /* 오늘의 상품 추천 */
 .today_recommend_products {
+  background: skyblue;
   width: 1050px;
   padding: 40px 0;;
   margin: 0 auto;
@@ -72,93 +74,107 @@
 .recommend_products_sub{
   font-size: 28px;
   font-weight: 700;
+  color: var(--content);
   padding: 12px 0;
   text-align: center;
+  line-height: 1.4;
 }
 .swiper_container {
-  margin-top: 28px;
   position: relative;
 }
 .swiper_recommend_products{
+  margin-top: 28px;
   width: 1050px;
-  height: 430px;
+  height: 426px;
   overflow: hidden;
+  position: relative;
 }
 .recommend_products_wrapper {
+  background: lime;
   width: 100%;
   height: 100%;
   display: flex;
   flex-flow: row nowrap;
   transition-property: transform;
-  box-sizing: content-box;
 }
 .recommend_products_slide {
-  flex-shrink: 0;
+  background: orange;
   width: 249px;
-  height: 100%;
-  position: relative;
   margin-right: 18px;
-  transition-property: transform;
 }
 .product_img_container {
-  overflow: hidden;
-  position: relative;
+  background: yellow;
   height: 320px;
 }
 .product_img_container img{
-  position: absolute;
-  /* inset: -100%; */
   width: 100%;
   height: 100%;
-  margin: auto;
   object-fit: cover;
-  transition: all 0.5s ease-in-out 0s;
+  /* vertical-align: middle; */
+  /* transition: all 0.5s ease-in-out 0s; */
 }
 .product_info {
+  margin-top: 16px;
   height: 90px;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 8px;
+}
+.product_info_sale {
+  margin-top: 16px;
+  height: 90px;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 8px;
+  align-items: flex-start;
 }
 .product_name{
-  padding-top: 16px;
+  width: 100%;
   font-size: 16px;
-  color: #333333;
-}
-.product_price {
-  padding-top: 8px;
-  font-size: 22px;
-  font-weight: 600;
-  line-height: 1.5;
-  color: #333333;
+  line-height: 1.6;
+  color: var(--content);
 }
 .sale_rate {
-  display: inline-block;
-  padding-top: 8px;
-  font-size: 22px;
+  font-size: 21px;
   font-weight: 600;
   line-height: 1.5;
   color: var(--accent-yellow);
-  margin-right: 8px;
+}
+.product_price {
+  font-size: 21px;
+  font-weight: 600;
+  line-height: 1.5;
+  color: var(--content);
+}
+.product_cost {
+  width: 100%;
+  font-size: 12px;
+  line-height: 1.6;
+  color: var(--gray-400);
+  text-decoration: line-through;
 }
 .recommend_products_prev {
-  width: 52px;
-  height: 52px;
-  background: url(../assets/icons/main/Arrow-main-banner.png) no-repeat;
+  width: 60px;
+  height: 60px;
+  background: url(../assets/icons/main/arrow2.png) no-repeat;
   position: absolute;
-  top: 150px;
+  top: 132px;
   left: -25px;
+  transform: scaleX(-1);
 }
 .recommend_products_next {
-  width: 52px;
-  height: 52px;
-  background: url(../assets/icons/main/Arrow-main-banner.png) no-repeat;
-  transform: scaleX(-1);
+  width: 60px;
+  height: 60px;
+  background: url(../assets/icons/main/arrow2.png) no-repeat;
   position: absolute;
-  top: 150px;
+  top: 132px;
   right: -25px;
 }
 .recommend_products_prev::after,
 .recommend_products_next::after {
   display: none;
 }
+
 
 /* sub_banner */
 .sub_banner {
