--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -105,6 +105,7 @@
 .product_img_container {
   background: yellow;
   height: 320px;
+  position: relative;
 }
 .product_img_container img{
   width: 100%;
@@ -113,15 +114,24 @@
   /* vertical-align: middle; */
   /* transition: all 0.5s ease-in-out 0s; */
 }
+.product_img_container button {
+  position: absolute;
+  bottom: 17px;
+  right: 15px;
+  width: 45px;
+  height: 45px;
+  overflow: hidden;
+  clip-path: circle(50%);
+}
 .product_info {
-  margin-top: 16px;
-  height: 90px;
+  padding-top: 16px;
+  height: 106px;
   display: flex;
   flex-flow: column nowrap;
   gap: 8px;
 }
 .product_info_sale {
-  margin-top: 16px;
+  padding-top: 16px;
   height: 90px;
   display: flex;
   flex-flow: row wrap;
