[style] 비밀글 체크박스 적용  #22

--- a/client/css/page_productDetail_dr.css
+++ b/client/css/page_productDetail_dr.css
@@ -466,3 +466,13 @@ label {
   font-size: small;
   text-align: right;
 }
+
+input[type=checkbox] {
+  display:none;
+}
+input[type=checkbox] + label { 
+  cursor: pointer; 
+  padding-left: 23px; 
+  background-repeat: no-repeat;
+  background-image: url('../assets/icons/Icon/unchecked.svg');
+}
