[chore] 회원가입 js파일 생성 및 마크업 #31

--- a/client/css/color.css
+++ b/client/css/color.css
@@ -4,6 +4,7 @@
   --white: #ffffff;
   --purple: #5f0080;
   --content: #333333;
+  --gray-none: #dddddd;
   --gray-50: #f9f9f9;
   --gray-100: #e1e1e1;
   --gray-200: #c4c4c4;
