--- a/client/css/common.css
+++ b/client/css/common.css
@@ -8,7 +8,8 @@
   margin: 0 auto;
 }
 
-.top_bar, .logo_bar {
+.top_bar,
+.logo_bar {
   display: block;
   margin: 0 6px;
   color: var(--gray-bar);
@@ -30,7 +31,6 @@
   width: 100%;
   text-align: center;
   background-color: var(--purple);
-  
 }
 
 .popup {
@@ -151,7 +151,8 @@
   margin-left: 6px;
   width: 8px;
   height: 8px;
-  background: transparent url("../assets/icons/Icon/new.png") center / 8px no-repeat;
+  background: transparent url("../assets/icons/Icon/new.png") center / 8px
+    no-repeat;
 }
 
 .search_wrap {
@@ -168,7 +169,7 @@
 
 .search_group {
   width: 400px;
-  display: relative; 
+  display: relative;
 }
 
 .search_form {
@@ -205,7 +206,8 @@
   right: 20px;
   width: 32px;
   height: 32px;
-  background: transparent url(../assets/icons/Icon/search.png) center / 32px no-repeat;
+  background: transparent url(../assets/icons/Icon/search.png) center / 32px
+    no-repeat;
   vertical-align: bottom;
 }
 
@@ -215,14 +217,15 @@
   display: flex;
 }
 
-.icon_wrap a{
+.icon_wrap a {
   display: block;
   width: 36px;
   height: 36px;
 }
 
 .icon_location {
-  background: transparent url("../assets/icons/Icon/location.png") center / 36px no-repeat;
+  background: transparent url("../assets/icons/Icon/location.png") center / 36px
+    no-repeat;
 }
 
 .icon_location:hover {
@@ -230,7 +233,8 @@
 }
 
 .icon_heart {
-  background: transparent url("../assets/icons/Icon/heart.png") center / 36px no-repeat;
+  background: transparent url("../assets/icons/Icon/heart.png") center / 36px
+    no-repeat;
   margin: 0 20px;
 }
 
@@ -239,7 +243,8 @@
 }
 
 .icon_cart {
-  background: transparent url("../assets/icons/Icon/cart.png") center / 36px no-repeat;
+  background: transparent url("../assets/icons/Icon/cart.png") center / 36px
+    no-repeat;
 }
 
 .icon_cart:hover {
@@ -299,7 +304,7 @@
   background-color: var(--gray-100);
 }
 
-.category li:hover a{
+.category li:hover a {
   color: var(--purple);
 }
 
@@ -411,12 +416,15 @@
   margin-top: 23px;
 }
 
-.question_kakao, .question_oneOnOne, .question_lot {
+.question_kakao,
+.question_oneOnOne,
+.question_lot {
   display: flex;
   flex-direction: row;
 }
 
-.question_oneOnOne, .question_lot {
+.question_oneOnOne,
+.question_lot {
   margin-top: 23px;
 }
 
@@ -535,7 +543,7 @@
   margin-right: 8px;
 }
 
-.alliance_payment img{
+.alliance_payment img {
   width: 102px;
   height: 32px;
   margin-right: 8px;
@@ -549,7 +557,7 @@
   width: 222px;
 }
 
-.alliance_payment{
+.alliance_payment {
   width: 270px;
 }
 
