--- a/client/css/common.css
+++ b/client/css/common.css
@@ -10,9 +10,10 @@
 
 .top_bar,
 .logo_bar {
-  display: block;
-  margin: 0 6px;
-  color: var(--gray-bar);
+  width: 1px;
+  height: 13px;
+  background-color: var(--gray-bar);
+  margin: 0 12px;
 }
 
 .footer_bar {
@@ -170,6 +171,8 @@
 .search_group {
   width: 400px;
   display: relative;
+  /* display: flex;
+  flex-direction: row; */
 }
 
 .search_form {
@@ -217,8 +220,7 @@
   display: flex;
 }
 
-.icon_wrap a {
-  display: block;
+.icon button {
   width: 36px;
   height: 36px;
 }
@@ -283,7 +285,7 @@
   display: none;
   position: absolute;
   width: 84px;
-  padding-top: 30px;
+  padding-top: 26px;
 }
 
 .category:hover ul {
@@ -543,29 +545,13 @@
   margin-right: 8px;
 }
 
-.alliance_payment img {
+.payment_btn img {
   width: 102px;
   height: 32px;
   margin-right: 8px;
 }
 
-.alliance_isms {
-  width: 217px;
-}
-
-.alliance_eprivacy {
-  width: 222px;
-}
-
-.alliance_payment {
-  width: 270px;
-}
-
-.alliance_wooribank {
-  width: 283px;
-}
-
-.copyright_wrap {
+.copyright {
   width: 100%;
   height: 108px;
   background: var(--gray-50);
