--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -1,26 +1,39 @@
 /* pop_up */
+body {
+  position: relative;
+}
+#modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99999;
+  width: 100%;
+  height: 100%;
+}
 .popup_container {
-  background: black;
+  position: absolute;
+  top: 297px;
+  left: 50%;
+  transform: translateX(-50%);
   width: 440px;
-  /* height: 672px; */
+  height: 672px;
   border-radius: 16px;
   overflow: hidden;
   display: flex;
   flex-flow: row wrap;
-  position: absolute;
-  top: 280px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 100;
   box-shadow: 0px 8px 36px rgba(0, 0, 0, 0.2);
 }
-.popup_beauty {
-  width: 100%;
+.popup_beauty-container{
+  width: 440px;
   height: 586px;
+}
+.popup_beauty {
+  display: block;
+  width: 100%;
+  height: 100%;
   background: url(../assets/popup_beauty/popup_img.png) no-repeat 0 0 / cover;
 }
 .popup_container button {
-  /* background: yellow; */
   width: 50%;
   height: 86px;
   font-size: 16px;
