[feat] main_banner swiper 기능 추가 #18

--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -46,13 +46,14 @@ body {
 .swiper_main_banner{
   background: orange;
   min-width: 1050px;
-  max-height: 370px;
+  height: 370px;
   position: relative;
   overflow: hidden;
 }
 .swiper-slide img{
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .main_banner_prev {
   width: 52px;
