--- a/client/css/reset.css
+++ b/client/css/reset.css
@@ -66,7 +66,7 @@ input:focus {
   outline: none;
 }
 
-input[type="text"]:focus, input[type="password"]:focus {
+input[type="text"]:focus, input[type="password"]:focus, input[type="tel"]:focus {
   border: 1px solid var(--black);
 }
 
