--- a/client/css/productList.css
+++ b/client/css/productList.css
@@ -15,6 +15,7 @@ h2.title {
   width: 267px;
   padding-right: 47px;
   /* height: 960px; */
+  /* position: static; */
 }
 
 .filter_menu {
@@ -44,6 +45,26 @@ button.toggle_btn {
   font-weight: 600;
   text-align: left;
   border-bottom: 1px solid var(--gray-100);
+  transition: 0.6s;
+}
+
+.toggle_btn svg {
+  transition: 0.4s;
+}
+
+.list_wrapper {
+  /* background-color: red; */
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease-out;
+}
+
+.list_wrapper a:hover {
+  color: var(--purple);
+}
+
+.active {
+  transform: rotate(180deg);
 }
 
 .category_list,
