--- a/client/css/page_productDetail_dr.css
+++ b/client/css/page_productDetail_dr.css
@@ -346,7 +346,10 @@ tr td button {
   top: 0;
 }
 
-
+.product-name {
+  font-style: normal;
+  font-weight: 600;
+}
 .review-popup-info {
   position: relative;
   width: 729px;
@@ -479,4 +482,13 @@ input[type=checkbox]:checked + label {
 
 .secret-checkbox {
   height : 58px;
+}
+
+.folded {
+  display: none;
+  overflow: hidden;
+}
+
+.active {
+  
 }
