--- a/client/css/page_productDetail_dr.css
+++ b/client/css/page_productDetail_dr.css
@@ -98,6 +98,7 @@
   font-weight: 600;
   font-size: 12.003px;
   line-height: 150%;
+
   padding: 20px;
   gap: 40px;
   width: 1050px;
@@ -268,7 +269,7 @@
 .inquiry-table {
   width: 1050px;
   height:auto;
-  border-top: #000000 2px solid;
+
   padding : 0px 20px;
 }
 
@@ -287,11 +288,14 @@ tbody td:first-child {
 thead {
   width: 1050px;
   height: 58px;
+  border-color: #000000;
+  border-top: #000000 2px solid;
+  border-bottom: #898989 1px soild;
 
 }
 
 td {
-  border-top: #E1E1E1 1px solid;
+  
 }
 
 .title {
@@ -393,7 +397,7 @@ tr td button {
 }
 
 textarea {
-  width: 629px;
+  width: 645px;
   height: 198px;
   color: #A6A6A6;
   display: inline-block;
@@ -414,7 +418,7 @@ label {
 
 
 .review-title-input-wrapper input {
-  width: 629px;
+  width: 645px;
   height: 32px;
   margin-bottom: 12px;
   display: inline-block;
@@ -490,5 +494,5 @@ input[type=checkbox]:checked + label {
 }
 
 .active {
-  
+
 }
