[chore] 아코디언 메뉴 기능 오류 수정 #42

--- a/client/css/page_productDetail_dr.css
+++ b/client/css/page_productDetail_dr.css
@@ -285,6 +285,10 @@ tbody td:first-child {
   color: #000;
 }
 
+tr {
+  border-bottom : 1px solid #898989;
+}
+
 thead {
   width: 1050px;
   height: 58px;
