[chore] 오늘의 추천 상품과 할인 추천 상품 구분을 위한 리팩토링 #21

--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -78,7 +78,7 @@ body {
 
 
 /* 오늘의 상품 추천 */
-.today_recommend_products {
+.recommend_products {
   width: 1050px;
   padding: 40px 0;;
   margin: 0 auto;
