[feat] 자바스크립트 코드 주석 정리

--- a/client/css/page_productDetail_my.css
+++ b/client/css/page_productDetail_my.css
@@ -376,6 +376,9 @@ body {
   justify-content: center;
   align-items: center;
   margin-top: 48px;
+  background-color: yellowgreen;
+  /* 추가 코드 */
+  
 }
 
 .product_navigation button {
