--- a/client/css/juhee.css
+++ b/client/css/juhee.css
@@ -44,13 +44,15 @@ body {
 
 /* main_banner */
 .swiper_main_banner{
-  min-width: 1050px;
+  max-width: 1900px;
   height: 370px;
+  margin: 0 auto;
   position: relative;
   overflow: hidden;
 }
-.swiper-slide img{
+.slide_main_banner img{
   width: 100%;
+  min-width: 1050px;
   height: 100%;
   object-fit: cover;
 }
@@ -68,6 +70,17 @@ body {
 .main_banner_prev::after,
 .main_banner_next::after {
   display: none;
+}
+.pagination_main_banner {
+  width: 47px;
+  border-radius: 12px;
+  color: var(--white);
+  background: rgba(64, 64, 64, 0.3);
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.5;
+  bottom: 28px;
+  left: 1436px;
 }
 
 
