--- a/client/css/page_productDetail_my.css
+++ b/client/css/page_productDetail_my.css
@@ -380,16 +380,24 @@ body {
   align-items: center;
   margin-top: 48px;
   /* 추가 코드 */
-  background-color: yellowgreen;
+  /* background-color: yellowgreen; */
   position:sticky;
   top:0;
 
 }
 
+.product_navigation button.btn_is_focus {
+  border-width: 1px 1px 0px 1px;
+  border-style: solid;
+  border-color: #E1E1E1;
+  background-color: white;
+  color: #5F0080;
+}
+
 .product_navigation button {
   width: 263.25px;
   height: 54px;
-  background: #F9F9F9;
+  background-color: #F9F9F9;
   border: 1px solid #A6A6A6;
   font-weight: 600;
   font-size: 16px;
